--- a/ciaolabella/templates/member/register.html
+++ b/ciaolabella/templates/member/register.html
@@ -89,13 +89,14 @@
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPONE_NB" class="form-label mt-4">Phone Member</label>
-                        <input name="phone_nb" type="text" class="form-control" id="exampleInputPONE_NB" aria-describedby="PONE_NBHelp" placeholder="Enter Phone Member">
-                        <small id="PONE_NBHelp" class="form-text text-muted">We'll never share your phone number with anyone else.</small>
+                        <label for="exampleInputPONE_NB" class="form-label mt-4">Phone number</label>
+                        <input name="phone_nb" type="text" class="form-control" id="exampleInputPONE_NB" aria-describedby="PONE_NBHelp" placeholder="Enter Phone Number">
+                        <small id="PHONE_NBHelp" class="form-text text-muted">We'll never share your phone number with anyone else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputAGE_NB" class="form-label mt-4">Age</label>
-                        <input name="age_nb" type="number" class="form-control" id="exampleInputAGE_NB" aria-describedby="AGE_NBHelp" placeholder="Enter your age">
+                        <label for="exampleInputBIRTH_NB" class="form-label mt-4">Birthday</label>
+                        <input name="birth_nb" type="date" class="form-control" id="exampleInputBIRTH_NB" aria-describedby="BIRTH_NBHelp" placeholder="Enter your birthday">
+                        <small id="BIRTH_NBHelp" class="form-text text-muted">We'll never share your birthday with anyone else.</small>
                     </div>
                     
 
@@ -146,7 +147,7 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <input type="button"  value="Sign up" onclick="memReg()" class="login100-form-btn"></input>
+                        <input type="button" value="Sign up" onclick="memReg()" class="login100-form-btn"></input>
                     </div>
 
 
@@ -169,13 +170,50 @@
                             form.user_nm.focus();
                             return;
                         }
-                        form.action = "/member/register/";
-                        form.submit();
+                        if (form.email_txt.value=="") {
+                            alert("이메일을 입력해 주십시오.");
+                            form.email_txt.focus();
+                            return;
+                        }
+                        if (form.phone_nb.value=="") {
+                            alert("전화번호를 입력해 주십시오.");
+                            form.phone_nb.focus();
+                            return;
+                        }
+                        if (form.birth_nb.value=="") {
+                            alert("생년월일을 입력해 주십시오.");
+                            form.birth_nb.focus();
+                            return;
+                        }
+
+                        $.ajax({
+                            url: '/member/register/',
+                            method: "post",
+                            async: true,
+                            data: {
+                                'user_nm': form.user_nm.value,
+                                'user_id': form.user_id.value,
+                                'user_pw': form.user_pw.value,
+                                'email_txt': form.email_txt.value,
+                                'phone_nb': form.phone_nb.value,
+                                'region_kb': form.region_kb.value,
+                                'birth_nb': form.birth_nb.value,
+                                'gender_kb': form.gender_kb.value
+                            },
+                            dataType: "json",
+                            success: function (context) {
+                                alert(context.message);
+                                var id_check = context.id_check;
+                                if (id_check == 1) {
+                                    document.location = '/';
+                                }
+                            },
+                            error : function() {
+                                alert('통신이 실패하였습니다');
+                            }
+                        })
                     }
                     </script>
-                    {% if message %}
-                    <script>alert('{{ message }}');</script>
-                    {% endif %}
 
 					<div class="flex-col-c p-t-170 p-b-40">
 						<span class="txt1 p-b-9">
