--- a/ciaolabella/templates/member/mypage.html
+++ b/ciaolabella/templates/member/mypage.html
@@ -170,7 +170,7 @@
                     <div class="col-lg-6 wow fadeInUp mypage-top" data-wow-delay="0.5s">
                         <div class="row g-5 align-items-center flex-md-row" data-wow-delay="0.2s" style="max-width: 600px;">
                             <h1 class="mb-3">내 정보</h1>
-                            <div class="card mt-3">
+                            <div class="card mt-3 ml-3">
                                 <ul class="list-group list-group-flush">
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Name</h6>
@@ -181,8 +181,8 @@
                                     <span>{{ member.user_id }}</span>
                                   </li>
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <h6 class="mb-0">Age</h6>
-                                    <span>{{ member.age_nb }}</span>
+                                    <h6 class="mb-0">Birth</h6>
+                                    <span>{{ member.birth_nb }}</span>
                                   </li>
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Email</h6>
