'db스키마_변경에_따른_템플릿_수정'

--- a/ciaolabella/templates/member/mypage.html
+++ b/ciaolabella/templates/member/mypage.html
@@ -182,7 +182,7 @@
                                   </li>
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Birth</h6>
-                                    <span>{{ member.birth_nb }}</span>
+                                    <span>{{ member.birth_dt }}</span>
                                   </li>
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Email</h6>
@@ -322,6 +322,7 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
 </body>
 
 </html>
