--- a/ciaolabella/templates/member/register.html
+++ b/ciaolabella/templates/member/register.html
@@ -94,9 +94,9 @@
                         <small id="PONE_NBHelp" class="form-text text-muted">We'll never share your phone number with anyone else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputBIRTH_NB" class="form-label mt-4">Birthday</label>
-                        <input name="birth_nb" type="date" class="form-control" id="exampleInputBIRTH_NB" aria-describedby="BIRTH_NBHelp" placeholder="Enter your birthday">
-                        <small id="BIRTH_NBHelp" class="form-text text-muted">We'll never share your birthday with anyone else.</small>
+                        <label for="exampleInputBIRTH_DT" class="form-label mt-4">Birthday</label>
+                        <input name="birth_dt" type="date" class="form-control" id="exampleInputBIRTH_DT" aria-describedby="BIRTH_DTHelp" placeholder="Enter your birthday">
+                        <small id="BIRTH_DTHelp" class="form-text text-muted">We'll never share your birthday with anyone else.</small>
                     </div>
                     
 
@@ -180,9 +180,9 @@
                                 form.phone_nb.focus();
                                 return;
                             }
-                            if (form.birth_nb.value=="") {
+                            if (form.birth_dt.value=="") {
                                 alert("생년월일을 입력해 주십시오.");
-                                form.birth_nb.focus();
+                                form.birth_dt.focus();
                                 return;
                             }
 
@@ -197,7 +197,7 @@
                                     'email_txt': form.email_txt.value,
                                     'phone_nb': form.phone_nb.value,
                                     'region_kb': form.region_kb.value,
-                                    'birth_nb': form.birth_nb.value,
+                                    'birth_dt': form.birth_dt.value,
                                     'gender_kb': form.gender_kb.value
                                 },
                                 dataType: "json",
@@ -259,6 +259,7 @@
 	<script src="{% static '/member_static/vendor/countdowntime/countdowntime.js'%}"></script>
 <!--===============================================================================================-->
 	<script src="{% static '/member_static/js/main.js'%}"></script>
+    <script src="{% static '/member_static/js/logout.js'%}"></script>
 
 </body>
 
