'스크립트_추가'

--- a/ciaolabella/templates/ecopointapp/ecopoint.html
+++ b/ciaolabella/templates/ecopointapp/ecopoint.html
@@ -294,7 +294,7 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
 </body>
 
 </html>
