--- a/ciaolabella/templates/ciaolabella/about.html
+++ b/ciaolabella/templates/ciaolabella/about.html
@@ -118,7 +118,6 @@
                     <h1 class="display-5 animated fadeIn mb-4">About Our Services</h1> 
                 </div>
                 <div class="col-md-6 animated fadeIn">
-                    <img class="img-fluid" src="img/header.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -310,6 +309,7 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
 </body>
 
 </html>
