--- a/ciaolabella/templates/ecopointapp/aboutecopoint.html
+++ b/ciaolabella/templates/ecopointapp/aboutecopoint.html
@@ -33,6 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+
     <style>
         body, h1, h2, h3, h4, h5, h6, p, span, a{
             font-family: 'Jua', sans-serif !important;
@@ -234,6 +235,7 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
 </body>
 
 </html>
