--- a/ciaolabella/templates/ecopointapp/ecopoint2.html
+++ b/ciaolabella/templates/ecopointapp/ecopoint2.html
@@ -195,9 +195,6 @@
                     <h2 class="display-5 animated fadeIn mb-4">에코포인트 적립</h2>
                     <p class="display-7">무라벨 제품을 구매하고 인증하면 에코포인트가 적립됩니다!</p>
                 </div>
-                <div class="col-md-6 animated fadeIn">
-                    <img class="img-fluid" src="img/header.jpg" alt="">
-                </div>
             </div>
         </div>
         <!-- Header End -->
@@ -294,6 +291,7 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
 </body>
 
 </html>
