--- a/ciaolabella/templates/member/register.html
+++ b/ciaolabella/templates/member/register.html
@@ -218,6 +218,7 @@
 	<script src="{% static '/member_static/vendor/countdowntime/countdowntime.js'%}"></script>
 <!--===============================================================================================-->
 	<script src="{% static '/member_static/js/main.js'%}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
 
 </body>
 
