--- a/ciaolabella/templates/member/mypage.html
+++ b/ciaolabella/templates/member/mypage.html
@@ -31,7 +31,7 @@
 
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    
+
 	<style>
 		body, h1, h2, h3, h4, h5, h6, p, span, a{
 			font-family: 'Jua', sans-serif !important;
@@ -88,6 +88,10 @@
         .mypage-bottom {
             height: 40rem;
             object-fit: cover;
+        }
+        .menu-border {
+            border-radius: 0.2rem;
+            box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);
         }
     </style>
 </head>
@@ -152,11 +156,14 @@
 
 
         <!-- Header Start -->
-        <div class="container-fluid header bg-white p-0">
+        <div class="container-fluid header bg-white p-0 mb-5">
             <div class="col-md-12 p-5 mt-lg-5"></div>
             <div class="row g-0 align-items-center flex-md-row">
-                <div class="col-md-6 p-5 mt-lg-5">
-                    <h1 class="display-5 animated fadeIn mb-4">마이페이지</h1> 
+                <div class="col-md-12 p-5 mt-lg-5">
+                    <div class="mx-4">
+                        <h1 class="display-5 animated fadeIn mb-2">마이페이지</h1>
+                    </div>
+                    <div class="col-12 mx-2" style="height: 0.8rem; background-color: #00B98E;"></div>
                 </div>
             </div>
         </div>
@@ -164,13 +171,13 @@
 
         <!-- My Info, Point Start -->
         <!--My Info Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl">
             <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeInUp mypage-top" data-wow-delay="0.5s">
-                        <div class="row g-5 align-items-center flex-md-row" data-wow-delay="0.2s" style="max-width: 600px;">
-                            <h1 class="mb-3">내 정보</h1>
-                            <div class="card mt-3 ml-3">
+                <div class="row g-5 align-items-center mx-auto">
+                    <div class="col-lg-6 wow fadeInUp mypage-top p-3" data-wow-delay="0.5s">
+                        <div class="row g-5 align-items-center flex-md-row menu-border mx-auto" data-wow-delay="0.2s" style="max-width: 600px; height: 30rem;">
+                            <h1 class="mb-0 mx-3">내 정보</h1>
+                            <div class="card col-11 p-3 mx-auto">
                                 <ul class="list-group list-group-flush">
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Name</h6>
@@ -183,6 +190,10 @@
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Birth</h6>
                                     <span>{{ member.birth_dt }}</span>
+                                  </li>
+                                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                    <h6 class="mb-0">Gender</h6>
+                                    <span>{{ member.gender_kb }}</span>
                                   </li>
                                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                     <h6 class="mb-0">Email</h6>
@@ -198,16 +209,17 @@
                                   </li>
                                 </ul>
                             </div>
+                            <div style="height:2rem;"></div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp mypage-top" data-wow-delay="0.5s">
-                        <div class="row g-5 align-items-center flex-md-row" data-wow-delay="0.2s" style="max-width: 600px;">
-                            <h1 class="mb-0">에코 레벨</h1>
-                            <p class="mb-4 display-7">
+                    <div class="col-lg-6 wow fadeInUp mypage-top p-3" data-wow-delay="0.5s">
+                        <div class="row g-5 align-items-center flex-md-row menu-border mx-auto" data-wow-delay="0.2s" style="max-width: 600px; height:30rem;">
+                            <h1 class="mb-0 mx-3">에코 레벨</h1>
+                            <p class="mb-1 px-5 fs-5">
                                 현재 북극의 평년 기온 14.5℃ 를 다시 이전처럼 13.5℃ 로 돌려주세요.
                                 에코 포인트를 적립하여 북극의 온도는 내리고 에코 레벨은 높혀서 지구를 지켜주세요.
                             </p>
-                            <div class="text-right p-4 mt-3">
+                            <div class="text-right p-5 mt-0">
                                 <div>
                                     <progress id="progress" value="{{ grade }}" min="0" max="10"></progress><br><br>
                                     <div class="fw-bold mb-0">
@@ -219,43 +231,61 @@
                                             <h5 class="fw-bold mb-0" style="display:inline;">누적 포인트 : </h5>
                                             <h5 class="fw-bold mb-0" style="display:inline; float:right;">{{ total }} ECOPOINT</h5>
                                         </div>
-                                    </div><br><br><br>                                
-                                </div>           
+                                    </div><br><br><br><br><br><br>
+                                </div>
                             </div>
                         </div>
-                    </div>            
+                    </div>
                 </div>
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeInUp mypage-bottom" data-wow-delay="0.5s">
-                        <div class="row g-5 align-items-center flex-md-row" data-wow-delay="0.2s" style="max-width: 600px;">
-                            <h1 class="mb-3">포인트 적립내역</h1>
+                <div class="row g-5 align-items-center mx-auto mt-2">
+                    <div class="col-lg-6 wow fadeInUp mypage-bottom p-3" data-wow-delay="0.5s">
+                        <div class="row g-5 align-items-center flex-md-row menu-border mx-auto" data-wow-delay="0.2s" style="max-width: 600px; height:36rem;">
+                            <h1 class="mb-0 mx-3">실시간 인기 검색어</h1>
+                            <div class="mx-3 mx-auto mb-5">
                                 <table>
                                     <thead>
-                                        <tr color="darkgreen" style="color:white" height="30">
-                                            <th class="tb-1">Time</th>
-                                            <th class="tb-1">Value</th>
+                                        <tr color="darkgreen" style="color:white" height="50">
+                                            <th class="tb-1">{{ age_cri }}대 인기 검색어</th>
+                                            <th class="tb-1">{{ gender_cri }} 인기 검색어</th>
                                         </tr>
                                     </thead>
                                     <tbody >
-                                    {% for P in point %}
                                         <tr>
-                                            <td class="tb-1">{{P.save_tm|date:'Y-m-d H:i'}}</td>
-                                            <td class="tb-1">{{P.point_amt}}</td>
+                                            <td class="tb-1">1. {{ search.age1 }}</td>
+                                            <td class="tb-1">1. {{ search.gen1 }}</td>
                                         </tr>
-                                    {% endfor %}
+                                        <tr>
+                                            <td class="tb-1">2. {{ search.age2 }}</td>
+                                            <td class="tb-1">2. {{ search.gen2 }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb-1">3. {{ search.age3 }}</td>
+                                            <td class="tb-1">3. {{ search.gen3 }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb-1">4. {{ search.age4 }}</td>
+                                            <td class="tb-1">4. {{ search.gen4 }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb-1">5. {{ search.age5 }}</td>
+                                            <td class="tb-1">5. {{ search.gen5 }}</td>
+                                        </tr>
                                     </tbody>
                                 </table>
-                            <hr>
-                            <h6 class="mb-3" style="color: gray; text-align: right;">1 plastic = 10 ECOPOINT</h6>
+                            </div>
+                            <br><br><br>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp mypage-bottom" data-wow-delay="0.2s">
-                        <div class="row g-5 align-items-center flex-md-row" style="max-width: 600px; ">
-                            <h1 class="mb-3">기간별 에코포인트</h1>
+                    <div class="col-lg-6 wow fadeInUp mypage-bottom p-3" data-wow-delay="0.2s">
+                        <div class="row g-5 align-items-center flex-md-row menu-border mx-auto" style="max-width: 600px; height:36rem;">
+                            <h1 class="mb-0 mx-3">기간별 에코포인트</h1>
+                            <div class="p-0 m-0">
                             {% autoescape off %}
-                            {{ graph }}
+                                {{ graph }}
                             {% endautoescape %}
-                        </div>   
+                            </div>
+                            <h6 class="mt-0 mb-3" style="color: gray; text-align: right;">1 plastic = 10 ECOPOINT</h6>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -290,7 +320,7 @@
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                             &copy; <a class="border-bottom" href="#">Ciao label la</a>, All Right Reserved.
-							
+
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                         </div>
