add member to about page and delete useless imgs

--- a/ciaolabella/templates/ciaolabella/about.html
+++ b/ciaolabella/templates/ciaolabella/about.html
@@ -149,19 +149,18 @@
             </div>
         </div>
         <!-- About End -->
-
         <!-- Team Start -->
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Team Ohjijo</h1>
-                    <p class="display-7">팀 오지조를 소개합니다.</p>
+                    <h1 class="mb-3">Ciaolabella2 Team Ozi</h1>
+                    <p class="display-7">Ciaolabella2 의 팀 오지를 소개합니다.</p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'img/hanna3.png' %}" alt="">
+                                <img class="img-fluid" src="{% static 'img/1hn.png' %}" alt="">
                                 <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://github.com/hanna-joo"><i class="fab fa-github fa-2x"></i></a>
                                 </div>
@@ -175,7 +174,89 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'img/yujeong3.png' %}" alt="">
+                                <img class="img-fluid" src="{% static 'img/1yj.png' %}" alt="">
+                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://github.com/yu-je0ng"><i class="fab fa-github fa-2x"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Yujeong Go</h5>
+                                <small>Data Engineer</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp align-items-center" data-wow-delay="0.7s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="{% static 'img/2js.jpg' %}" alt="">
+                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://github.com/Prudent-PS"><i class="fab fa-github fa-2x"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Jesun Ryu</h5>
+                                <small>Data Engineer</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="{% static 'img/2kd.jpg' %}" alt="">
+                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://github.com/Kyung-Deok"><i class="fab fa-github fa-2x"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Kyungdeok Lee</h5>
+                                <small>Data Engineer</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp align-items-center" data-wow-delay="0.7s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="{% static 'img/2sj.jpg' %}" alt="">
+                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://github.com/nijes"><i class="fab fa-github fa-2x"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Sejin Kim</h5>
+                                <small>Data Engineer</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Team End -->
+        <!-- Team Start -->
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h1 class="mb-3">Ciaolabella Team Ohjijo</h1>
+                    <p class="display-7">Ciaolabella 의 팀 오지조를 소개합니다.</p>
+                </div>
+                <div class="row g-4">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="{% static 'img/1hn.png' %}" alt="">
+                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://github.com/hanna-joo"><i class="fab fa-github fa-2x"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Hanna Joo</h5>
+                                <small>Data Engineer</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="{% static 'img/1yj.png' %}" alt="">
                                 <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://github.com/yu-je0ng"><i class="fab fa-github fa-2x"></i></a>
                                 </div>
@@ -189,7 +270,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'img/booyong3.png' %}" alt="">
+                                <img class="img-fluid" src="{% static 'img/1by.png' %}" alt="">
                                 <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://github.com/edusby"><i class="fab fa-github fa-2x"></i></a>
                                 </div>
@@ -203,7 +284,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'img/soyeon3.png' %}" alt="">
+                                <img class="img-fluid" src="{% static 'img/1sy.png' %}" alt="">
                                 <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://github.com/SoyeoAn"><i class="fab fa-github fa-2x"></i></a>
                                 </div>
@@ -217,7 +298,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'img/gieun2.png' %}" alt="">
+                                <img class="img-fluid" src="{% static 'img/1gu.png' %}" alt="">
                                 <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://github.com/ShinGieun"><i class="fab fa-github fa-2x"></i></a>
                                 </div>
@@ -231,7 +312,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'img/changhwan3.png' %}" alt="">
+                                <img class="img-fluid" src="{% static 'img/1ch.png' %}" alt="">
                                 <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://github.com/changhwanin"><i class="fab fa-github fa-2x"></i></a>
                                 </div>
@@ -246,13 +327,11 @@
             </div>
         </div>
         <!-- Team End -->
-        
-
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-3">
                 <div class="row g-5">
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-4 col-md-6">
                         <h5 class="text-white mb-4">Team Ohjijo</h5>
                         <a class="btn btn-link text-white-50" href="https://github.com/hanna-joo"><i class="fab fa-github fa-1x"></i>  [DE] hanna joo</a>
                         <a class="btn btn-link text-white-50" href="https://github.com/yu-je0ng"><i class="fab fa-github fa-1x"></i>  [DE] yujeong go</a>
@@ -261,7 +340,15 @@
                         <p class="btn btn-link text-white-50" href="https://github.com/ShinGieun"><i class="fab fa-github fa-1x"></i>  [DS] gieun shin</p>
                         <p class="btn btn-link text-white-50" href="https://github.com/changhwanin"><i class="fab fa-github fa-1x"></i>  [DS] changhwan in</p>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-4 col-md-6">
+                        <h5 class="text-white mb-4">Team Ozi</h5>
+                        <a class="btn btn-link text-white-50" href="https://github.com/hanna-joo"><i class="fab fa-github fa-1x"></i>  [DE] hanna joo</a>
+                        <a class="btn btn-link text-white-50" href="https://github.com/yu-je0ng"><i class="fab fa-github fa-1x"></i>  [DE] yujeong go</a>
+                        <a class="btn btn-link text-white-50" href="https://github.com/Prudent-PS"><i class="fab fa-github fa-1x"></i>  [DE] jesun ryu</a>
+                        <a class="btn btn-link text-white-50" href="https://github.com/Kyung-deok"><i class="fab fa-github fa-1x"></i>  [DE] kyungdeok lee</a>
+                        <a class="btn btn-link text-white-50" href="https://github.com/nijes"><i class="fab fa-github fa-1x"></i>  [DE] sejin kim</a>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
                         <h5 class="text-white mb-4">Quick Links</h5>
                         <a class="btn btn-link text-white-50" href="{% url 'index' %}">Home</a>
                         <a class="btn btn-link text-white-50" href="{% url 'about' %}">About Us</a>
